# web

./: .gitignore  Cargo.toml  README.md  ci_local.sh
.sqlx/: query-821155824f8038f9906e381de6859ac0690f8ba04b58d9bf28ea7b333f121f33.json
file-compression/: Cargo.toml
file-compression/src/: lib.rs  main.rs
file-uploader/: Cargo.toml
file-uploader/src/: main.rs
migrations/: 20250330104008_create_compression_tasks.sql
rust-cli-file-uploader/: Cargo.toml
rust-cli-file-uploader/src/: main.rs
rust-file-compression/: Cargo.toml
rust-file-upload-endpoint/src/: main.rs
rust-file-upload-endpoint/src/public/: index.html
upload-endpoint/: .env  Cargo.toml
upload-endpoint/migrations/: 20250401220502_init.down.sql  20250401220502_init.up.sql
upload-endpoint/src/: db.rs  main.rs  openapi.rs
upload-endpoint/src/handlers/: check.rs  compress_file.rs  mod.rs  upload_file.rs
upload-endpoint/src/public/: index.html  welcome.html
uploads/: README.md
