[package]
name = "file-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt ="0.3"
# upload-endpoint = { path = "../upload-endpoint" }
tokio = { version = "1", features = ["full"] } 
clap = { version = "4", features = ["derive"] } 
reqwest = { version = "0.12.14", features = ["multipart"] }
