[package]
name = "rust-file-upload-endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
tokio = { version = "1.35.0", features = ["full"] }
# rust-cli-file-uploader = { path = "../rust-cli-file-uploader" }
reqwest = { version = "0.12.14", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
