[package]
edition = "2021"
name = "upload-endpoint"
version = "0.1.0"

[dependencies]
serde = { version = "*", features = ["derive"] }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
flate2 = "1"

[lib]
path = "../file-compression/src/lib.rs"
